--- a/.gitignore
+++ b/.gitignore
@@ -94,6 +94,7 @@ wp-content/mysql.sql
 /wp-content/reports/
 /wp-content/rss/
 /wp-content/upgrade/
+/wp-content/upgrade/
 /wp-content/wflogs/
 /wp-content/log/
 /wp-content/nextgen-gallery/
