--- a/.gitignore
+++ b/.gitignore
@@ -86,6 +86,7 @@ wp-content/mysql.sql
 /wp-content/plugins/woo-gutenberg-products-block
 /wp-content/plugins/wordpress-importer
 /wp-content/plugins/woocommerce
+/wp-content/plugins/fb-messenger
 
 /wp-content/gallery/
 /wp-content/aiowps_backups
